--- a/inde.html
+++ b/inde.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>I can help your!</h1>
+    <h2>I can push my code in git hub</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, laudantium aliquid porro exercitationem debitis accusamus ut in unde non quam? Temporibus ut qui tempore praesentium voluptatem optio magnam, suscipit perspiciatis libero quidem? Enim aliquid magnam officia natus impedit architecto, voluptate excepturi necessitatibus repudiandae debitis recusandae quos consequatur nemo? Minima, porro.</p>
 </body>
 </html>
